--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
             
             <!-- Fallback: Traditional Hexagonal Skills Grid -->
             <div class="hex-grid hex-grid-fallback" style="display: none;">
-                <div class="hex-item" data-skill="95">
+                <div class="hex-item">
                     <div class="hexagon">
                         <div class="hex-inner">
                             <div class="hex-content">
@@ -350,7 +350,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="hex-item" data-skill="88">
+                <div class="hex-item">
                     <div class="hexagon">
                         <div class="hex-inner">
                             <div class="hex-content">
@@ -361,7 +361,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="hex-item" data-skill="90">
+                <div class="hex-item">
                     <div class="hexagon">
                         <div class="hex-inner">
                             <div class="hex-content">
@@ -372,7 +372,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="hex-item" data-skill="85">
+                <div class="hex-item">
                     <div class="hexagon">
                         <div class="hex-inner">
                             <div class="hex-content">
@@ -383,7 +383,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="hex-item" data-skill="85">
+                <div class="hex-item">
                     <div class="hexagon">
                         <div class="hex-inner">
                             <div class="hex-content">
@@ -394,7 +394,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="hex-item" data-skill="80">
+                <div class="hex-item">
                     <div class="hexagon">
                         <div class="hex-inner">
                             <div class="hex-content">
@@ -405,7 +405,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="hex-item" data-skill="90">
+                <div class="hex-item">
                     <div class="hexagon">
                         <div class="hex-inner">
                             <div class="hex-content">
@@ -416,7 +416,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="hex-item" data-skill="80">
+                <div class="hex-item">
                     <div class="hexagon">
                         <div class="hex-inner">
                             <div class="hex-content">
