--- a/index.html
+++ b/index.html
@@ -310,21 +310,11 @@
             <div class="section-header">
                 <h2 class="section-title">Skills Arsenal</h2>
                 <div class="section-line"></div>
-                <p class="section-subtitle">Interactive 3D hexagonal mastery across the stack</p>
+                <p class="section-subtitle">Hexagonal mastery across the stack</p>
             </div>
             
-            <!-- 3D Skills Container -->
-            <div class="skills-3d-wrapper">
-                <div id="skills-3d-container" class="skills-3d-container">
-                    <!-- Three.js 3D scene will be rendered here -->
-                </div>
-                <div class="skills-3d-instructions">
-                    <p>🖱️ Move your mouse to interact • 🖱️ Click hexagons for details</p>
-                </div>
-            </div>
-            
-            <!-- Fallback: Traditional Hexagonal Skills Grid -->
-            <div class="hex-grid hex-grid-fallback" style="display: none;">
+            <!-- Traditional Hexagonal Skills Grid -->
+            <div class="hex-grid hex-grid-fallback">
                 <div class="hex-item">
                     <div class="hexagon">
                         <div class="hex-inner">
@@ -374,18 +364,7 @@
                         <div class="hex-inner">
                             <div class="hex-content">
                                 <i class="devicon-mysql-plain colored skill-icon"></i>
-                                <h4>MySQL</h4>
-                                <span class="skill-level">Advanced</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="hex-item">
-                    <div class="hexagon">
-                        <div class="hex-inner">
-                            <div class="hex-content">
-                                <i class="devicon-postgresql-plain colored skill-icon"></i>
-                                <h4>PostgreSQL</h4>
+                                <h4>SQL</h4>
                                 <span class="skill-level">Advanced</span>
                             </div>
                         </div>
@@ -397,17 +376,6 @@
                             <div class="hex-content">
                                 <i class="devicon-css3-plain colored skill-icon"></i>
                                 <h4>CSS</h4>
-                                <span class="skill-level">Advanced</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="hex-item">
-                    <div class="hexagon">
-                        <div class="hex-inner">
-                            <div class="hex-content">
-                                <i class="devicon-python-plain colored skill-icon"></i>
-                                <h4>Python</h4>
                                 <span class="skill-level">Advanced</span>
                             </div>
                         </div>
